src/test/deca/context/valid/objet/return_cont_01.deca
// Description:
//   return in main
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023


class B {

}

class A extends B {
    int x;
    A a;
    B setX() {
        return a;
    }
}
