src/test/deca/context/invalid/objet/extends_inexistant_class.deca
// Description:
//     Class extend d'une classe inexistante.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A extends B{
    protected int x;
}


